[gd_scene load_steps=10 format=3 uid="uid://dipwvh3mnxwrp"]

[ext_resource type="Script" path="res://minigames/willinghippo/main.gd" id="1_mca63"]
[ext_resource type="PackedScene" uid="uid://bvpnrwu51kssf" path="res://minigames/willinghippo/watermelon.tscn" id="1_wyqtf"]
[ext_resource type="Texture2D" uid="uid://cqobiivaisbl7" path="res://minigames/willinghippo/Happyhippo_sin_boca.png" id="4_5txqc"]
[ext_resource type="Texture2D" uid="uid://b135iipjs4ds2" path="res://minigames/willinghippo/savanna.jpg" id="4_eibs5"]
[ext_resource type="Texture2D" uid="uid://byjhfyqipq1kv" path="res://minigames/willinghippo/Happyhippo_boca.png" id="5_yldox"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ym0m6"]
size = Vector2(20, 1920)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_qikh2"]
size = Vector2(20, 1920)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_xo5kg"]
size = Vector2(1080, 20)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_7c6o3"]
size = Vector2(1080, 20)

[node name="main" type="Node2D"]
script = ExtResource("1_mca63")

[node name="background" type="Sprite2D" parent="."]
position = Vector2(360, 640)
texture = ExtResource("4_eibs5")

[node name="watermelon" parent="." instance=ExtResource("1_wyqtf")]
position = Vector2(361, 50)

[node name="LimiteIzquierda" type="Area2D" parent="."]
position = Vector2(-190, 640)

[node name="CollisionShape2D" type="CollisionShape2D" parent="LimiteIzquierda"]
shape = SubResource("RectangleShape2D_ym0m6")

[node name="LimiteDerecha" type="Area2D" parent="."]
position = Vector2(910, 640)

[node name="CollisionShape2D" type="CollisionShape2D" parent="LimiteDerecha"]
shape = SubResource("RectangleShape2D_qikh2")

[node name="LimiteArriba" type="Area2D" parent="."]
position = Vector2(360, -330)

[node name="CollisionShape2D" type="CollisionShape2D" parent="LimiteArriba"]
shape = SubResource("RectangleShape2D_xo5kg")

[node name="LimiteAbajo" type="Area2D" parent="."]
position = Vector2(360, 1610)

[node name="CollisionShape2D" type="CollisionShape2D" parent="LimiteAbajo"]
shape = SubResource("RectangleShape2D_7c6o3")

[node name="hippo" type="StaticBody2D" parent="."]

[node name="hippo" type="Sprite2D" parent="hippo"]
position = Vector2(360, 1225)
scale = Vector2(0.3, 0.3)
texture = ExtResource("4_5txqc")

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="hippo"]
polygon = PackedVector2Array(409, 1232, 406, 1230, 401, 1235, 397, 1240, 393, 1247, 392, 1250, 389, 1253, 388, 1258, 390, 1267, 393, 1272, 392, 1276, 384, 1278, 365, 1283, 353, 1285, 340, 1287, 325, 1289, 311, 1286, 290, 1282, 274, 1278, 273, 1274, 277, 1262, 283, 1243, 288, 1237, 294, 1223, 299, 1216, 300, 1204, 296, 1188, 292, 1181, 287, 1178, 289, 1188, 292, 1195, 293, 1202, 293, 1208, 285, 1212, 283, 1220, 286, 1224, 283, 1229, 282, 1234, 280, 1237, 278, 1246, 273, 1257, 269, 1272, 267, 1279, 270, 1280, 270, 1283, 323, 1296, 375, 1287, 378, 1285, 390, 1282, 396, 1278, 398, 1272, 396, 1267, 391, 1259, 393, 1254, 396, 1253, 398, 1246, 401, 1241)

[node name="Hipopotamo" type="Area2D" parent="."]

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Hipopotamo"]
polygon = PackedVector2Array(282, 1174, 285, 1152, 312, 1137, 320, 1145, 323, 1149, 327, 1162, 325, 1164, 325, 1173, 323, 1178, 327, 1186, 335, 1193, 349, 1198, 362, 1202, 375, 1200, 385, 1200, 387, 1195, 391, 1196, 390, 1183, 394, 1182, 402, 1191, 414, 1184, 418, 1189, 416, 1192, 422, 1192, 423, 1203, 422, 1214, 419, 1217, 418, 1221, 416, 1226, 412, 1231)

[node name="hippo_mouth" type="Sprite2D" parent="."]
position = Vector2(360, 1225)
scale = Vector2(0.3, 0.3)
texture = ExtResource("5_yldox")
